검색 버그 수정